--- a/css/advantages.css
+++ b/css/advantages.css
@@ -82,13 +82,14 @@ button:focus,
     color: #fff;
 }
 
-.text-left {
+
+/* .text-left {
     text-align: left !important;
 }
 
 .text-right {
     text-align: right !important;
-}
+} */
 
 .text-center {
     text-align: center !important;
@@ -124,7 +125,8 @@ body::-webkit-scrollbar-button {
 
 /* Anketa & attach input file style */
 
-.anketa label {
+
+/* .anketa label {
     color: #fff;
 }
 
@@ -161,7 +163,6 @@ body::-webkit-scrollbar-button {
 
 .inputfile+label {
     cursor: pointer;
-    /*    max-width: 50%; */
     padding: 30px;
     border: #000 solid 1px;
     background-color: #9b9b9b;
@@ -174,7 +175,6 @@ body::-webkit-scrollbar-button {
 
 .inputfile:focus+label,
 .inputfile+label:hover {
-    /*max-width: 50%; */
     background-color: #fff;
 }
 
@@ -185,7 +185,7 @@ body::-webkit-scrollbar-button {
 
 .inputfile+label * {
     pointer-events: none;
-}
+} */
 
 input:hover,
 input:focus {
@@ -207,18 +207,20 @@ input:focus {
     margin: auto;
 }
 
-.modal-h {
+
+/* .modal-h {
     color: #000;
     font-size: 20px;
     font-weight: 300;
     margin-top: 10px;
-}
+} */
 
 .modal-body a {
     color: #000!important;
 }
 
-.mdl_block {
+
+/* .mdl_block {
     font-size: 18px;
     vertical-align: middle;
     margin-bottom: 5px;
@@ -226,7 +228,7 @@ input:focus {
 
 .mdl_block img {
     width: 50%;
-}
+} */
 
 
 /* Modal "Callback & Anketa" */
@@ -249,14 +251,15 @@ input:focus {
     color: #000000;
 }
 
-.modal-body .inputfile+label {
+
+/* .modal-body .inputfile+label {
     background-color: #fff;
 }
 
 .modal-body .inputfile:focus+label,
 .modal-body .inputfile+label:hover {
     background-color: #9b9b9b;
-}
+} */
 
 
 /* SEPARATOR STYLE */
@@ -325,10 +328,11 @@ input:focus {
     font-size: 16px!important;
 }
 
-.boot-center {
+
+/* .boot-center {
     margin: auto;
     text-align: center!important;
-}
+} */
 
 .btn-pos {
     margin: 10px 4px;
@@ -338,6 +342,8 @@ input:focus {
 
 /* Mouse scroll animate */
 
+
+/* 
 .scroll-downs {
     position: absolute;
     top: 0;
@@ -347,7 +353,7 @@ input:focus {
     margin: auto;
     width: 34px;
     height: 55px;
-}
+} */
 
 .mousey {
     cursor: pointer;
@@ -373,7 +379,8 @@ input:focus {
     animation-iteration-count: infinite;
 }
 
-@keyframes scroll {
+
+/* @keyframes scroll {
     0% {
         opacity: 0;
     }
@@ -391,7 +398,7 @@ input:focus {
     color: #fff;
     border-color: #d0bc89;
     background-color: #d0bc89;
-}
+} */
 
 .head-mouse {
     position: absolute;
@@ -401,9 +408,10 @@ input:focus {
     right: 0;
 }
 
-::placeholder {
+
+/* ::placeholder {
     padding-left: 7px;
-}
+} */
 
 
 /* Menu style */
@@ -421,7 +429,8 @@ input:focus {
     position: relative;
 }
 
-.menu .true:after {
+
+/* .menu .true:after {
     content: "";
     color: #d0bc89;
     display: block;
@@ -430,7 +439,7 @@ input:focus {
     bottom: -5px;
     width: 100%;
     left: 0;
-}
+} */
 
 .menu a:after {
     content: "";
@@ -455,17 +464,19 @@ input:focus {
     left: 0;
 }
 
-.mob-menu-bar {
+
+/* .mob-menu-bar {
     margin-right: 10px;
-}
+} */
 
 .mob-menu-icons {
     display: block;
 }
 
-.mob-menu-icons img {
+
+/* .mob-menu-icons img {
     width: 1.5rem;
-}
+} */
 
 .home_menu {
     position: absolute;
@@ -504,31 +515,35 @@ input:focus {
     font-size: 8.8px;
 }
 
-.navbar-brand:hover,
+
+/* .navbar-brand:hover,
 .navbar-brand:focus {
     text-decoration: none;
-}
+} */
 
-.navbar-brand p {
+
+/* .navbar-brand p {
     font-size: 9px;
-}
+} */
 
 .navbar-dark .navbar-toggler-icon {
     background-image: url(../img/icon/menu.svg);
 }
 
-.main_menu .navbar-toggler {
+
+/* .main_menu .navbar-toggler {
     font-size: 1rem;
     float: right!important;
     position: relative;
     z-index: 1;
-}
+} */
 
 .menu-icon {
     padding: 15px;
 }
 
-.main_menu .navbar-toggler:after {
+
+/* .main_menu .navbar-toggler:after {
     position: absolute;
     content: "";
     width: 100%;
@@ -537,7 +552,7 @@ input:focus {
     left: 0;
     z-index: -1;
     background-size: 100% auto;
-}
+} */
 
 .main_menu .main-menu-item {
     text-align: center;
@@ -553,9 +568,10 @@ input:focus {
     text-transform: capitalize;
 }
 
-.main_menu .main-menu-item ul li .nav-link:hover {
+
+/* .main_menu .main-menu-item ul li .nav-link:hover {
     color: #fff;
-}
+} */
 
 .nav-link {
     display: block;
@@ -757,10 +773,12 @@ input:focus {
 
 /* REVIEWS STYLE */
 
+
+/* 
 #comment {
     background-color: var(--black);
     color: var(--white);
-}
+} */
 
 #more1,
 #more2,
@@ -808,7 +826,7 @@ input:focus {
 
 .comment_person {
     position: absolute;
-    width: 141px;
+    width: 145px;
     border-radius: 70px;
     top: 7px;
     left: 10px;
@@ -880,15 +898,17 @@ input:focus {
     letter-spacing: 5px;
 }
 
-.why-box-hr,
+
+/* .why-box-hr,
 {
     display: none;
-}
+} */
 
-.about-us-box span {
+
+/* .about-us-box span {
     font-size: 25px;
     margin-bottom: 10px;
-}
+} */
 
 
 /* FOOTER STYLE */
@@ -905,15 +925,18 @@ footer {
     font-size: 12px;
 }
 
-.footer img {
+
+/* .footer img {
     vertical-align: bottom;
-}
+} */
 
 .footer span {
     font-family: Geometos;
     font-size: 26px;
 }
 
+
+/* 
 .footer_logo {
     vertical-align: middle;
     margin: auto;
@@ -923,7 +946,7 @@ footer {
     max-width: 90%;
     margin-right: auto;
     margin-left: auto;
-}
+} */
 
 
 /* FOOTER SOCIAL LINKS STYLE */
@@ -932,9 +955,10 @@ footer {
     padding: 1%;
 }
 
-.social ul {
+
+/* .social ul {
     background-color: #131217 !important;
-}
+} */
 
 .pol {
     font-size: 10px;
@@ -959,9 +983,10 @@ footer {
     border-radius: 50px;
 }
 
-.bnt-social::after {
+
+/* .bnt-social::after {
     display: none;
-}
+} */
 
 .btn-social-main {
     vertical-align: middle;
@@ -991,9 +1016,10 @@ footer {
     top: -280px;
 }
 
-.social-icons .navbar-nav.show li:nth-child(5) {
+
+/* .social-icons .navbar-nav.show li:nth-child(5) {
     top: -350px;
-}
+} */
 
 .social-icons .btn-primary {
     background: #000;
@@ -1136,12 +1162,12 @@ footer {
     .navbar {
         padding: inherit;
     }
-    .main_menu .navbar-toggler {
+    /* .main_menu .navbar-toggler {
         font-size: 0.85rem;
     }
     .mob-menu-icons img {
         width: 20px
-    }
+    } */
     .section_tittle {
         margin-top: 10px;
         font-size: 30px;
@@ -1173,16 +1199,16 @@ footer {
         margin: auto;
         font-size: 15px!important;
     }
-    .contact-number a {
+    /* .contact-number a {
         margin: 6px 5px 0px 5px!important;
         font-size: 16px!important;
-    }
+    } */
     .modal-body {
         flex: none;
     }
-     ::placeholder {
+    /* ::placeholder {
         font-size: .9rem
-    }
+    } */
     .head-text-ads .boot {
         padding: 10px 15px;
     }
@@ -1256,7 +1282,7 @@ footer {
         margin-left: -50px;
         transform: scale(0.7);
     }
-    .main_menu .navbar-toggler {
+    /* .main_menu .navbar-toggler {
         font-size: 1.4rem;
     }
     .navbar-dark .navbar-toggler {
@@ -1266,7 +1292,7 @@ footer {
         width: 28px;
         margin-top: 3px;
         margin-right: 10px;
-    }
+    } */
     .section_tittle {
         font-size: 50px;
         margin-bottom: 50px;
@@ -1296,14 +1322,14 @@ footer {
 /* iPad PRO STYLE */
 
 @media only screen and (min-width: 991px) and (max-width: 1024px) {
-    .mob-menu-icons img {
+    /* .mob-menu-icons img {
         width: 32px;
         margin-top: 3px;
         margin-right: 12px;
     }
     .main_menu .navbar-toggler {
         font-size: 1.5rem;
-    }
+    } */
     .main_menu .navbar-brand {
         margin-left: -40px;
         margin-top: 5px;
@@ -1327,9 +1353,9 @@ footer {
         transform: scale(0.8);
         margin-left: -40px;
     }
-    .navbar-brand p {
+    /* .navbar-brand p {
         display: none
-    }
+    } */
     .section_tittle {
         margin-top: unset;
     }
@@ -1471,15 +1497,15 @@ footer {
     .main_menu .main-menu-item {
         padding-left: 25px;
     }
-    .main_menu .main-menu-item ul li .nav-link {
+    /* .main_menu .main-menu-item ul li .nav-link {
         padding: 35px 16px;
-    }
+    } */
     .comment_icon {
         max-width: 40%!important;
         top: 80px;
     }
     .comment_person {
-        width: auto;
+        /* width: auto; */
         max-width: 85%!important;
     }
     .comment_content p {
@@ -1503,9 +1529,9 @@ footer {
 }
 
 @media only screen and (max-width: 1200px) {
-    .menu {
+    /* .menu {
         margin-left: unset;
-    }
+    } */
     .mousey {
         display: none
     }
@@ -1559,9 +1585,9 @@ footer {
     .navbar-collapse {
         top: 50px!important;
     }
-    .conditions-head {
+    /* .conditions-head {
         margin-top: 200px!important;
-    }
+    } */
     .comment_carousel img {
         margin: unset
     }
