--- a/css/about.css
+++ b/css/about.css
@@ -68,18 +68,11 @@
         outline: none;
         box-shadow: none;
         -webkit-transition: 1s;
-        transition: 1s;
+        transition: 1s
     }
-    /* .text-left {
-        text-align: left !important;
-    }
-    
-    .text-right {
-        text-align: right !important;
-    } */
     
     .text-center {
-        text-align: center !important;
+        text-align: center !important
     }
     
     .text-center span {
@@ -160,18 +153,8 @@
         text-transform: capitalize;
         vertical-align: middle;
         text-align: center;
-        position: relative;
+        position: relative
     }
-    /* .menu .true:after {
-        content: "";
-        color: #d0bc89;
-        display: block;
-        border-bottom: 1px solid;
-        position: absolute;
-        bottom: -5px;
-        width: 100%;
-        left: 0;
-    } */
     
     .menu a:after {
         content: "";
@@ -195,16 +178,10 @@
         width: 100%;
         left: 0;
     }
-    /* .mob-menu-bar {
-        margin-right: 10px;
-    } */
     
     .mob-menu-icons {
         display: block;
     }
-    /* .mob-menu-icons img {
-        width: 1.5rem;
-    } */
     
     .home_menu {
         position: absolute;
@@ -229,7 +206,6 @@
         font-family: Geometos;
         font-size: 1.32rem;
         padding: .8rem 0rem .7rem .9rem!important;
-        /*    margin-top: 0.27rem; */
     }
     
     .main_menu .navbar-brand span {
@@ -242,14 +218,6 @@
         font-family: Roboto;
         font-size: 8.8px;
     }
-    /* .navbar-brand:hover,
-    .navbar-brand:focus {
-        text-decoration: none;
-    }
-    
-    .navbar-brand p {
-        font-size: 9px;
-    } */
     
     .navbar-dark .navbar-toggler-icon {
         background-image: url(../img/icon/menu.svg);
@@ -265,16 +233,6 @@
     .menu-icon {
         padding: 15px;
     }
-    /* .main_menu .navbar-toggler:after {
-        position: absolute;
-        content: "";
-        width: 100%;
-        height: 100%;
-        top: 0;
-        left: 0;
-        z-index: -1;
-        background-size: 100% auto;
-    } */
     
     .main_menu .main-menu-item {
         text-align: center;
@@ -304,16 +262,6 @@
         margin: auto!important;
         opacity: 1;
     }
-    /* .menu_mob {
-        position: fixed;
-        z-index: 9999 !important;
-        width: 100%;
-        background-color: #000000;
-        box-shadow: 0px 10px 15px rgba(0, 0, 0, 0.05);
-        top: 0;
-        margin: auto!important;
-        opacity: 1;
-    } */
     
     .menu_fixed .main-menu-item ul li .nav-link {
         color: #ffffff;
@@ -367,10 +315,6 @@
     .nav-item {
         padding: 5px;
     }
-    /* .nav-pills .nav-link.active,
-    .nav-pills .show>.nav-link {
-        background: none;
-    } */
     
     .navbar-dark .navbar-nav .active>.nav-link,
     .navbar-dark .navbar-nav .nav-link.active,
@@ -393,20 +337,6 @@
     .scroll .hidden {
         display: none;
     }
-    /* .scroll .menu {
-    margin-left: -110px;
-} */
-    /* Mouse scroll animate */
-    /* .scroll-downs {
-        position: absolute;
-        top: 0;
-        right: 0;
-        bottom: 0;
-        left: 0;
-        margin: auto;
-        width: 34px;
-        height: 55px;
-    } */
     
     .mousey {
         cursor: pointer;
@@ -483,9 +413,6 @@
         font-size: 17px;
         font-weight: 300;
     }
-    /* .section-subtittle p {
-        line-height: unset;
-    } */
     
     .section-subtittle a {
         border-bottom-width: 1px;
@@ -509,26 +436,10 @@
         text-align: center;
         margin: auto;
     }
-    /* .modal-h {
-        color: #000;
-        font-size: 20px;
-        font-weight: 300;
-        margin-top: 10px;
-    } */
     
     .modal-body a {
         color: #000!important;
     }
-    /* .mdl_block {
-        font-size: 18px;
-        vertical-align: middle;
-        margin-bottom: 5px;
-    }
-    
-    .mdl_block img {
-        width: 50%;
-    } */
-    /* Modal "Callback & Anketa" */
     
     .modal-body input {
         font-size: 16px;
@@ -547,15 +458,6 @@
         background-repeat: no-repeat;
         color: #000000;
     }
-    /* .modal-body .inputfile+label {
-        background-color: #fff;
-    }
-    
-    .modal-body .inputfile:focus+label,
-    .modal-body .inputfile+label:hover {
-        background-color: #9b9b9b;
-    } */
-    /* attach input file style */
     
     .anketa input {
         font-size: 16px;
@@ -579,44 +481,6 @@
     input:focus {
         outline: none !important;
     }
-    /* .file-width {
-        max-width: 21.6%!important;
-    }
-    
-    .inputfile {
-        width: 0.1px;
-        height: 0px;
-        opacity: 0;
-        overflow: hidden;
-        position: absolute;
-        z-index: -1;
-    }
-    
-    .inputfile+label {
-        cursor: pointer;
-        padding: 30px;
-        border: #000 solid 1px;
-        background-color: #9b9b9b;
-        display: inline-block;
-    }
-    
-    .inputfile+label img {
-        width: 50%;
-    }
-    
-    .inputfile:focus+label,
-    .inputfile+label:hover {
-        background-color: #fff;
-    }
-    
-    .inputfile:focus+label {
-        outline: 1px dotted #000;
-        outline: -webkit-focus-ring-color auto 5px;
-    }
-    
-    .inputfile+label * {
-        pointer-events: none;
-    } */
     
      ::placeholder {
         padding-left: 7px;
@@ -664,6 +528,7 @@
         position: relative;
         overflow: hidden;
         background-image: linear-gradient(to top, black 0%, transparent 70%), url(../img/head_about.jpg);
+        background-repeat: no-repeat;
         background-size: auto 100%;
         background-position: center;
     }
@@ -707,17 +572,6 @@
         padding: 10px 40px;
     }
     /* CONTENT STYLE */
-    /* .pb-60 {
-        padding-bottom: 60px;
-    }
-    
-    .pt-60 {
-        padding-top: 60px;
-    }
-    
-    .mb-60 {
-        margin-bottom: 60px;
-    } */
     
     .about-us-desc {
         text-align: center;
@@ -812,35 +666,6 @@
         font-family: Geometos;
         font-size: 26px;
     }
-    /* .footer_logo {
-        vertical-align: middle;
-        margin: auto;
-    }
-    
-    .footer_logo img {
-        max-width: 90%;
-        margin-right: auto;
-        margin-left: auto;
-    }
-    
-    .cform_footer {
-        color: #fff!important;
-    }
-    
-    .anketa label {
-        color: #fff;
-    } */
-    /* Contacts style*/
-    /* .contact-tittle {
-        font-size: 24px;
-        font-weight: 300;
-    }
-    
-    .contact-phones {
-        vertical-align: middle;
-        margin-top: 15px;
-        ;
-    } */
     
     .contact-number {
         vertical-align: middle;
@@ -850,13 +675,6 @@
     .contact-form {
         display: block;
     }
-    /* .contacts {
-        margin-top: 30px;
-    }
-    
-    .contact-icons {
-        margin-left: -25px;
-    } */
     
     .contact-icons-pos i {
         font-size: 2rem;
@@ -867,9 +685,6 @@
     .social_link li {
         padding: 1%;
     }
-    /* .social ul {
-        background-color: #131217 !important;
-    } */
     
     .pol {
         font-size: 10px;
@@ -891,9 +706,6 @@
         border-color: #fff;
         border-radius: 50px;
     }
-    /* .bnt-social::after {
-        display: none;
-    } */
     
     .btn-social-main {
         vertical-align: middle;
@@ -922,10 +734,6 @@
     .social-icons .navbar-nav.show li:nth-child(4) {
         top: -280px;
     }
-    /*     
-    .social-icons .navbar-nav.show li:nth-child(5) {
-        top: -350px;
-    } */
     
     .social-icons .btn-primary {
         background: #000;
@@ -1068,12 +876,6 @@
         .navbar {
             padding: inherit;
         }
-        /* .main_menu .navbar-toggler {
-            font-size: 0.85rem;
-        }
-        .mob-menu-icons img {
-            width: 20px
-        } */
         .boot-mob-menu {
             margin: auto;
             font-size: 15px!important;
@@ -1093,10 +895,6 @@
         .section-subtittle {
             font-size: 1rem;
         }
-        /* .social_link li {
-            padding: 4%;
-            !important;
-        } */
         .fa-2x {
             font-size: 1.5rem!important;
         }
@@ -1191,9 +989,6 @@
             font-size: 26px;
             margin-top: 8px;
         }
-        /* .contact-icons {
-            margin: unset;
-        } */
         .contact-icons-pos {
             margin-left: 22px!important;
         }
@@ -1232,17 +1027,6 @@
             margin-left: -50px;
             transform: scale(0.7);
         }
-        /* .main_menu .navbar-toggler {
-            font-size: 1.4rem;
-        }
-        .navbar-dark .navbar-toggler {
-            margin-right: 10px;
-        }
-        .mob-menu-icons img {
-            width: 28px;
-            margin-top: 3px;
-            margin-right: 10px;
-        } */
         .section_tittle {
             font-size: 50px;
             margin-bottom: 50px;
@@ -1253,9 +1037,6 @@
         .section-subtittle {
             font-size: 15px;
         }
-        /* .social_link li {
-            padding: 3%;
-        } */
         .footer p {
             font-size: 10px;
         }
@@ -1263,9 +1044,6 @@
     /* iPad PRO STYLE */
     
     @media only screen and (min-width: 991px) and (max-width: 1024px) {
-        /* .main_menu .navbar-toggler {
-            font-size: 1.5rem;
-        } */
         .main_menu .navbar-brand {
             margin-left: -40px;
             margin-top: 5px;
@@ -1273,11 +1051,6 @@
         .separator-main {
             margin-top: 75px;
         }
-        /* .mob-menu-icons img {
-            width: 32px;
-            margin-top: 3px;
-            margin-right: 12px;
-        } */
     }
     
     @media only screen and (max-width: 414px) {
@@ -1293,9 +1066,6 @@
         .navbar-collapse {
             top: 50px!important;
         }
-        /* .social_link li {
-            padding: 5%;
-        } */
         .mob-menu-icons {
             margin-right: 0px;
         }
@@ -1337,10 +1107,6 @@
         .contact-icons-pos {
             margin-left: 10px
         }
-        /* .contact-icons-pos hr {
-            margin: 20px auto;
-            max-width: 30%
-        } */
     }
     
     @media (max-width: 576px) {
@@ -1357,9 +1123,6 @@
             transform: scale(0.8);
             margin-left: -40px;
         }
-        /* .navbar-brand p {
-            display: none
-        } */
         .section_tittle {
             margin-top: unset;
         }
@@ -1371,10 +1134,6 @@
         .separator-main {
             display: none;
         }
-        /* .separator-line-mob {
-            border-bottom: 2px solid #d0bc89;
-            line-height: 2px;
-        } */
         .head-text-about .boot {
             font-size: 0.84rem;
             padding: 10px 30px;
@@ -1387,7 +1146,6 @@
             max-width: 100%!important;
             padding: 0px 0px 20px 10px;
             border-left: 2px solid #d0bc89;
-            ;
         }
         .head-text-about p {
             font-size: 0.9rem;
@@ -1462,26 +1220,9 @@
         .main_menu .navbar-brand-mob {
             display: block
         }
-        /* .navbar-collapse ul li .nav-link {
-            color: #fff !important;
-        }
-        .navbar-light .navbar-toggler {
-            border-color: transparent;
-            padding: 0;
-        }
-        .navbar-dark .navbar-toggler {
-            border: none;
-        } */
         .main_menu .main-menu-item {
             text-align: left !important;
         }
-        /* .main_menu .main-menu-item .nav-item {
-            padding: 5px 15px !important;
-            margin: auto;
-        }
-        .main_menu .main-menu-item .nav-item a {
-            padding: 5px 15px !important;
-        } */
         .navbar-nav {
             align-items: start !important;
         }
@@ -1507,9 +1248,6 @@
         .main_menu .main-menu-item {
             padding-left: 25px;
         }
-        /* .main_menu .main-menu-item ul li .nav-link {
-            padding: 35px 16px;
-        } */
         .section_tittle {
             margin-bottom: 50px;
         }
@@ -1519,9 +1257,6 @@
         .separator-main {
             margin: 50px auto 0px auto;
         }
-        /* .contact-icons {
-            margin-left: unset
-        } */
         .about-us-box span {
             font-size: 1.8rem;
         }
@@ -1562,13 +1297,6 @@
         .back-to-top {
             display: none !important;
         }
-        /* .inputfile+label {
-            background-color: #fff;
-        } */
-        /* .inputfile:focus+label,
-        .inputfile+label:hover {
-            background-color: #9b9b9b;
-        } */
         .about-us-box.box_right {
             padding-right: unset;
             padding-left: 70px;
@@ -1599,12 +1327,10 @@
             padding: 10px;
         }
         .main_menu .navbar-brand {
-            /* margin-left: -250px; */
             position: absolute;
             left: 4%;
         }
         .menu_right_block {
-            /* margin-right: -270px; */
             position: absolute;
             right: 4%;
         }
@@ -1625,9 +1351,6 @@
     }
     
     @media only screen and (max-width: 1200px) {
-        /* .menu {
-            margin-left: unset;
-        } */
         .mousey {
             display: none
         }
@@ -1663,9 +1386,6 @@
         .fullscreen .modal-body ul {
             margin-top: 10%;
         }
-        /* .fullscreen .modal-body li {
-             padding: 10px 0 10px 0 ;
-        } */
         .fullscreen .modal-body a {
             color: #fff!important;
             font-size: 300%;
@@ -1677,8 +1397,7 @@
         }
         .head-text-about {
             top: 60%;
-            left: 7%;
-            /* max-width: 60%; */
+            left: 7%
         }
         .banner_part.about {
             background-image: linear-gradient(to top, black 0%, transparent 70%), url(../img/head_about.jpg)!important;
