--- a/css/faq.css
+++ b/css/faq.css
@@ -82,16 +82,6 @@ button:focus,
     color: #fff;
 }
 
-
-/* 
-.text-left {
-    text-align: left !important;
-}
-
-.text-right {
-    text-align: right !important;
-} */
-
 .text-center {
     text-align: center !important;
 }
@@ -154,38 +144,6 @@ body::-webkit-scrollbar-button {
 }
 
 
-/* 
-.boot-center {
-    margin: auto;
-    text-align: center!important;
-} */
-
-
-/* .btn-pos {
-    margin: 10px;
-    border-bottom-style: solid!important;
-} */
-
-
-/* Text under slider *Models* */
-
-
-/* .carousel-caption {
-    position: unset;
-}
-
-.carousel-caption p {
-    color: #fff;
-    margin-bottom: -30px;
-    font-weight: 300;
-}
-
-.carousel-caption span {
-    color: #d0bc89;
-    font-weight: bold;
-} */
-
-
 /* SEPARATOR STYLE */
 
 .s-opacity {
@@ -230,11 +188,6 @@ input:focus {
     outline: none !important;
 }
 
-
-/* .anketa label {
-    color: #fff;
-} */
-
 .anketa input {
     font-size: 16px;
     margin-bottom: 20px;
@@ -254,61 +207,7 @@ input:focus {
 }
 
 
-/* .file-width {
-    max-width: 21.6%!important;
-}
-
-.inputfile {
-    width: 0.1px;
-    height: 0px;
-    opacity: 0;
-    overflow: hidden;
-    position: absolute;
-    z-index: -1;
-}
-
-.inputfile+label {
-    cursor: pointer;
-    padding: 30px;
-    border: #000 solid 1px;
-    background-color: #9b9b9b;
-    display: inline-block;
-}
-
-.inputfile+label img {
-    width: 50%;
-}
-
-.inputfile:focus+label,
-.inputfile+label:hover {
-    background-color: #fff;
-}
-
-.inputfile:focus+label {
-    outline: 1px dotted #000;
-    outline: -webkit-focus-ring-color auto 5px;
-}
-
-.inputfile+label * {
-    pointer-events: none;
-}
- */
-
-
 /* Mouse scroll animate */
-
-
-/* 
-.scroll-downs {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    margin: auto;
-    width: 34px;
-    height: 55px;
-} */
 
 .mousey {
     cursor: pointer;
@@ -348,13 +247,6 @@ input:focus {
     }
 }
 
-
-/* .custom-control-input:checked~.custom-control-label::before {
-    color: #fff;
-    border-color: #d0bc89;
-    background-color: #d0bc89;
-} */
-
 .head-mouse {
     position: absolute;
     text-align: center;
@@ -382,19 +274,6 @@ input:focus {
     text-align: center;
     position: relative;
 }
-
-
-/* 
-.menu .true:after {
-    content: "";
-    color: #d0bc89;
-    display: block;
-    border-bottom: 1px solid;
-    position: absolute;
-    bottom: -5px;
-    width: 100%;
-    left: 0;
-} */
 
 .menu a:after {
     content: "";
@@ -454,7 +333,6 @@ input:focus {
     font-family: Geometos;
     font-size: 1.32rem;
     padding: .8rem 0rem .5rem .9rem!important;
-    /*    margin-top: 0.27rem; */
 }
 
 .main_menu .navbar-brand span {
@@ -473,40 +351,13 @@ input:focus {
     text-decoration: none;
 }
 
-
-/* 
-.navbar-brand p {
-    font-size: 9px;
-} */
-
 .navbar-dark .navbar-toggler-icon {
     background-image: url(../img/icon/menu.svg);
 }
 
-
-/* 
-.main_menu .navbar-toggler {
-    font-size: 1rem;
-    float: right!important;
-    position: relative;
-    z-index: 1;
-} */
-
 .menu-icon {
     padding: 15px;
 }
-
-
-/* .main_menu .navbar-toggler:after {
-    position: absolute;
-    content: "";
-    width: 100%;
-    height: 100%;
-    top: 0;
-    left: 0;
-    z-index: -1;
-    background-size: 100% auto;
-} */
 
 .main_menu .main-menu-item {
     text-align: center;
@@ -534,12 +385,6 @@ input:focus {
 .nav-item {
     padding: 5px;
 }
-
-
-/* .nav-pills .nav-link.active,
-.nav-pills .show>.nav-link {
-    background: none;
-} */
 
 .menu_fixed {
     position: fixed;
@@ -621,11 +466,6 @@ input:focus {
 }
 
 
-/* .scroll .menu {
-    margin-left: -110px;
-} */
-
-
 /* BLOCKS STYLE */
 
 .feature_part {
@@ -655,13 +495,6 @@ input:focus {
     line-height: unset;
 }
 
-
-/* .section-subtittle a {
-    border-bottom-width: 1px;
-    border-bottom-style: dotted;
-    border-bottom-color: #d0bc89;
-} */
-
 .section-subtittle .boot {
     border-bottom-style: solid!important;
 }
@@ -681,28 +514,9 @@ input:focus {
     margin: auto;
 }
 
-
-/* .modal-h {
-    color: #000;
-    font-size: 20px;
-    font-weight: 300;
-    margin-top: 10px;
-} */
-
 .modal-body a {
     color: #000!important;
 }
-
-
-/* .mdl_block {
-    font-size: 18px;
-    vertical-align: middle;
-    margin-bottom: 5px;
-}
-
-.mdl_block img {
-    width: 50%;
-} */
 
 
 /* Modal "Callback & Anketa" */
@@ -724,16 +538,6 @@ input:focus {
     background-repeat: no-repeat;
     color: #000000;
 }
-
-
-/* .modal-body .inputfile+label {
-    background-color: #fff;
-}
-
-.modal-body .inputfile:focus+label,
-.modal-body .inputfile+label:hover {
-    background-color: #9b9b9b;
-} */
 
 
 /* FAQ INDEX style */
@@ -828,6 +632,7 @@ input:focus {
     position: relative;
     overflow: hidden;
     background-image: linear-gradient(to top, black 0%, transparent 70%), url(../img/head_faq.jpg);
+    background-repeat: no-repeat;
     background-size: 100% auto;
     background-position: center;
 }
@@ -859,27 +664,10 @@ footer {
     font-size: 12px;
 }
 
-
-/* .footer img {
-    vertical-align: bottom;
-} */
-
 .footer span {
     font-family: Geometos;
     font-size: 26px;
 }
-
-
-/* .footer_logo {
-    vertical-align: middle;
-    margin: auto;
-}
-
-.footer_logo img {
-    max-width: 90%;
-    margin-right: auto;
-    margin-left: auto;
-} */
 
 
 /* Contacts style*/
@@ -892,15 +680,6 @@ footer {
 .contact-form {
     display: block;
 }
-
-
-/* .contacts {
-    margin-top: 30px;
-}
-
-.contact-icons {
-    margin-left: -25px;
-} */
 
 .contact-icons-pos i {
     font-size: 2rem;
@@ -917,11 +696,6 @@ footer {
 .social_link li {
     padding: 1%;
 }
-
-
-/* .social ul {
-    background-color: #131217 !important;
-} */
 
 .pol {
     font-size: 10px;
@@ -945,11 +719,6 @@ footer {
     border-color: #fff;
     border-radius: 50px;
 }
-
-
-/* .bnt-social::after {
-    display: none;
-} */
 
 .btn-social-main {
     vertical-align: middle;
@@ -1124,15 +893,9 @@ footer {
     .navbar {
         padding: inherit;
     }
-    /* .main_menu .navbar-toggler {
-        font-size: 0.85rem;
-    } */
     .head-text-faq span {
         font-size: 1.79rem!important;
     }
-    /* .mob-menu-icons img {
-        width: 20px
-    } */
     .section_tittle {
         margin-top: 10px;
         font-size: 30px;
@@ -1144,8 +907,7 @@ footer {
         font-size: 15px;
     }
     .social_link li {
-        padding: 4%;
-        !important;
+        padding: 4%!important;
     }
     .fa-2x {
         font-size: 1.5rem!important;
@@ -1211,9 +973,6 @@ footer {
 /* For iPhone 6/7/8 Plus */
 
 @media only screen and (min-width: 413px) and (max-width: 415px) {
-    /* .contact-icons {
-        margin: unset;
-    } */
     .navbar {
         padding: unset
     }
@@ -1262,17 +1021,6 @@ footer {
 }
 
 
-/* Pixel 2 XL style */
-
-
-/* 
-@media only screen and (min-height: 820px) and (max-height: 825px) {
-    .fullscreen .modal-body ul {
-        margin-top: 40%!important;
-    }
-} */
-
-
 /* iPad STYLE */
 
 @media only screen and (min-width: 768px) and (max-width: 991px) {
@@ -1280,17 +1028,6 @@ footer {
         margin-left: -50px;
         transform: scale(0.7);
     }
-    /* .main_menu .navbar-toggler {
-        font-size: 1.4rem;
-    } */
-    /* .navbar-dark .navbar-toggler {
-        margin-right: 10px;
-    } */
-    /* .mob-menu-icons img {
-        width: 28px;
-        margin-top: 3px;
-        margin-right: 10px;
-    } */
     .section_tittle {
         font-size: 50px;
         margin-bottom: 50px;
@@ -1307,26 +1044,12 @@ footer {
     .footer p {
         font-size: 10px;
     }
-    /* .file-width {
-        max-width: 50%!important;
-    }
-    .file-width span {
-        font-size: 15px;
-    } */
 }
 
 
 /* iPad PRO STYLE */
 
 @media only screen and (min-width: 991px) and (max-width: 1024px) {
-    /* .mob-menu-icons img {
-        width: 32px;
-        margin-top: 3px;
-        margin-right: 12px;
-    }
-    .main_menu .navbar-toggler {
-        font-size: 1.5rem;
-    } */
     .main_menu .navbar-brand {
         margin-left: -40px;
         margin-top: 5px;
@@ -1334,12 +1057,6 @@ footer {
     .separator-main {
         margin-top: 75px;
     }
-    /* .file-width {
-        max-width: 50%!important;
-    }
-    .file-width span {
-        font-size: 14px;
-    } */
 }
 
 @media (max-width: 576px) {
@@ -1352,16 +1069,10 @@ footer {
     p {
         margin-bottom: unset
     }
-    /* .section-subtittle a {
-        color: #fff;
-    } */
     .main_menu .navbar-brand {
         transform: scale(0.8);
         margin-left: -40px;
     }
-    /* .navbar-brand p {
-        display: none
-    } */
     .section_tittle {
         margin-top: unset;
     }
@@ -1373,19 +1084,9 @@ footer {
     .separator-main {
         display: none;
     }
-    /* .separator-line-mob {
-        border-bottom: 2px solid #d0bc89;
-        line-height: 2px;
-    } */
     .footer p {
         font-size: 10px;
     }
-    /* .file-width {
-        max-width: 50%!important;
-    }
-    .file-width span {
-        font-size: 11.5px;
-    } */
     footer {
         margin-top: 50px;
     }
@@ -1436,8 +1137,6 @@ footer {
     }
 }
 
-
-/* 
 @media (min-width: 1200px) {
     .navbar-toggle {
         display: none
@@ -1446,30 +1145,10 @@ footer {
         padding: 10px;
     }
     .main_menu .navbar-brand {
-        margin-left: -250px;
-    }
-    .menu_right_block {
-        margin-right: -270px;
-    }
-    footer {
-        margin-top: 100px;
-    }
-} */
-
-@media (min-width: 1200px) {
-    .navbar-toggle {
-        display: none
-    }
-    .main_menu .navbar {
-        padding: 10px;
-    }
-    .main_menu .navbar-brand {
-        /* margin-left: -250px; */
         position: absolute;
         left: 4%;
     }
     .menu_right_block {
-        /* margin-right: -270px; */
         position: absolute;
         right: 4%;
     }
@@ -1493,19 +1172,6 @@ footer {
     .main_menu .main-menu-item {
         padding-left: 25px;
     }
-    /* .main_menu .main-menu-item ul li .nav-link {
-        padding: 35px 16px;
-    }
-    .main-head-text {
-        margin-top: 55%;
-        margin-left: 15%;
-    }
-    .main-head-text p {
-        color: #000;
-    }
-    .single_page_menu .main-menu-item ul li .nav-link {
-        padding: 0px 16px;
-    } */
     .section_tittle {
         margin-bottom: 50px;
     }
@@ -1515,9 +1181,6 @@ footer {
     .separator-main {
         margin: 50px auto 0px auto;
     }
-    /* .contact-icons {
-        margin-left: unset
-    } */
 }
 
 @media only screen and (max-width: 414px) {
@@ -1531,9 +1194,6 @@ footer {
 }
 
 @media only screen and (max-width: 1200px) {
-    /* .menu {
-        margin-left: unset;
-    } */
     .main_menu .navbar-brand {
         transform: scale(0.7)
     }
@@ -1628,16 +1288,9 @@ footer {
         padding: 10px 30px;
         font-size: 16px;
     }
-    /* .btn-pos {
-        margin-top: 10px
-    } */
     .contact-icons-pos {
         margin-left: 10px
     }
-    /* .contact-icons-pos hr {
-        margin: 20px auto;
-        max-width: 30%
-    } */
     .contact-number {
         margin: 5px auto;
         display: flex;
@@ -1661,12 +1314,6 @@ footer {
     .social-icons {
         display: unset
     }
-    /* .icons_right_block {
-        display: block;
-    }
-    .contact-header {
-        margin-top: 20px;
-    } */
     .main_menu {
         position: fixed
     }
@@ -1676,32 +1323,12 @@ footer {
     .main_menu .navbar-brand-mob {
         display: block
     }
-    /* .navbar-collapse ul li .nav-link {
-        color: #fff !important;
-    }
-    .navbar-light .navbar-toggler {
-        border-color: transparent;
-        padding: 0;
-    }
-    .navbar-dark .navbar-toggler {
-        border: none;
-    } */
     .main_menu .main-menu-item {
         text-align: left !important;
     }
-    /* .main_menu .main-menu-item .nav-item {
-        padding: 5px 15px !important;
-        margin: auto;
-    }
-    .main_menu .main-menu-item .nav-item a {
-        padding: 5px 15px !important;
-    } */
     .navbar-nav {
         align-items: start !important;
     }
-    /* .banner_part .hright_block {
-        display: none;
-    } */
     .navbar-collapse {
         z-index: 9999 !important;
         position: fixed;
@@ -1712,12 +1339,6 @@ footer {
         text-align: center !important;
         box-shadow: 0px 11px 9px -5px rgba(0, 0, 0, 0.2);
     }
-    /* .boot:hover {
-        background: #000;
-        color: #ffffff;
-        background-position: 100% 0;
-        background-size: 200% 100%;
-    } */
 }
 
 @media (max-width: 1024px) {
@@ -1725,13 +1346,6 @@ footer {
     .back-to-top {
         display: none !important;
     }
-    /* .inputfile+label {
-        background-color: #fff;
-    }
-    .inputfile:focus+label,
-    .inputfile+label:hover {
-        background-color: #9b9b9b;
-    } */
     .head-text-faq {
         top: 30%;
         left: 7%;
@@ -1743,10 +1357,4 @@ footer {
     .container {
         max-width: 1170px;
     }
-    /* .file-left {
-        margin-left: 90px;
-    }
-    .file-right {
-        margin-right: 90px;
-    } */
 }
