--- a/css/about.css
+++ b/css/about.css
@@ -83,6 +83,11 @@
     .d-flex {
         color: #fff;
     }
+    
+    h1,
+    h2 {
+        font-weight: 300;
+    }
     /* Button style */
     
     .boot {
