--- a/css/advantages.css
+++ b/css/advantages.css
@@ -95,6 +95,11 @@ h1,
 h2,
 h3 {
     font-weight: 300;
+    font-size: 42px;
+}
+
+.head-text-ads h1 {
+    font-weight: 400;
 }
 
 
@@ -471,7 +476,7 @@ input:focus {
 
 .section_tittle {
     margin-top: 75px;
-    font-size: 42px;
+    /* font-size: 42px; */
     font-weight: 300;
     margin-bottom: 10px;
 }
