--- a/css/style.css
+++ b/css/style.css
@@ -81,6 +81,7 @@ ul {
 .section_tittle h2,
 .section_tittle h3 {
     font-weight: 300;
+    font-size: 42px;
 }
 
 
@@ -1274,12 +1275,13 @@ input:focus {
     font-weight: bold;
     line-height: 12px;
     margin-top: 38%;
-    padding: 4px 0px 24px 20px;
+    padding: 14px 0px 34px 20px;
     border-left: 4px solid #d0bc89;
 }
 
 .main-head-text h1 {
     font-size: 24.2px;
+    line-height: 1;
 }
 
 .main-head-text p {
