--- a/css/style.css
+++ b/css/style.css
@@ -623,7 +623,7 @@ body::-webkit-scrollbar-button {
     z-index: -1;
 }
 
-.inputfile+label {
+.inputfile_label {
     cursor: pointer;
     padding: 30px;
     border: #000 solid 1px;
@@ -631,7 +631,7 @@ body::-webkit-scrollbar-button {
     display: inline-block;
 }
 
-.inputfile+label img {
+.input_bg_img {
     width: 50%;
 }
 
